# videoanalytics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-template.yml  nginx.conf
.github/workflows/: pre-commit.yaml
.info/: log.sh  usefull.sh
grafana/: init.sh
k8s/: django-deployment.yaml  django-ingress.yaml  django-service.yaml  log.sh  postgres-service.yaml  postgres-statefulset.yaml
prometheus/: prometheus.yml
scripts/: configure.sh  docker-compose-setup.sh  install.sh  run.sh
videoanalytics/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
videoanalytics/backend/: celery.py  settings.py  urls.py
videoanalytics/videoanalytics/: apps.py  constants.py  tasks.py  utils.py  views.py  yolo.py
videoanalytics/videoanalytics/templates/: video_demo.html
