[tool.poetry]
name = "videoanalytics"
version = "0.1.0"
description = "Open source"
authors = ["ovctech"]
license = "Free"

[tool.poetry.dependencies]
python = "^3.10.0"
django = "^4.2.10"
djangorestframework = "^3.14.0"
django-admin = "^2.0.2"
opencv-python-headless = "^4.9.0.80"
psycopg2-binary = "^2.9.9"
ultralytics = "^8.1.18"
pytelegrambotapi = "^4.16.1"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"
flower = "^2.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
